--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A mybot control panel plugin.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/darkowlzz/controlPanel/issues"
   },
-  "homepage": "https://github.com/darkowlzz/controlPanel"
+  "homepage": "https://github.com/darkowlzz/controlPanel",
+  "devDependencies": {
+    "mocha": "^2.0.1",
+    "mybot": "git://github.com/darkowlzz/mybot",
+    "should": "^4.3.0"
+  },
+  "dependencies": {
+    "express": "^4.10.4"
+  }
 }
