--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "controlpanel"
   ],
   "author": "Sunny <indiasuny000@gmail.com> (darkowlzz)",
-  "license": "GPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/darkowlzz/controlPanel/issues"
   },
